# chess-cg50

./: CMakeLists.txt
assets/: fxconv-metadata.txt
assets-cg/: fxconv-metadata.txt
src/: main.c  smallchesslib.h
